@@ -1,3 +1,9 @@
+2018-08-30  Vlad Lazar  <vlad.lazar@arm.com>
+
+	PR middle-end/86995
+	* expmed.c (canonicalize_comparison): Use wi::sub instead of wi::add
+	if to_add is negative.
+
 2018-08-29  Bernd Edlinger  <bernd.edlinger@hotmail.de>
 
 	PR middle-end/87053
